# solana-deposit-program

./: .gitignore  Anchor.toml  package.json  pnpm-lock.yaml
idl/: deposit_program.json  deposit_program.ts
programs/deposit-program/: Cargo.toml
programs/deposit-program/src/: constants.rs  error.rs  lib.rs
programs/deposit-program/src/constants/: addresses.rs  mod.rs  seeds.rs  subscription_levels.rs  time_cost.rs  wallets.rs
programs/deposit-program/src/instructions/: balance_state.rs  deposit.rs  deposit_to_subscription_vault.rs  deposit_to_timed_vault.rs  deposit_to_vault.rs  mod.rs  pay_per_hour_and_unfreeze_balance.rs  pay_per_minute_and_unfreeze_balance.rs  pay_per_time.rs  refund.rs  refund_balance.rs  refund_subscription_balance.rs  refund_timed_balance.rs  subscribe.rs  subscribe_by_time.rs  subscribe_with_vault.rs
programs/deposit-program/src/reusable/: get_subscription_level.rs  mod.rs
programs/deposit-program/src/state/: mod.rs  user.rs  user_subscription_info.rs  user_timed_info.rs
tests/: deposit.test.ts  depositToSubscriptionVault.test.ts  depositToTimedVault.test.ts  duplicateSubscriptionRejection.test.ts  insufficientBalance.test.ts  payPerHourAndUnfreezeBalance.test.ts  payPerMinuteAndUnfreezeBalance.test.ts  payPerTime.test.ts  refund.test.ts  refundBalance.test.ts  refundSubscriptionBalance.test.ts  refundTimedBalance.test.ts  subscribe.test.ts  subscription.test.ts  subscriptionWithVault.test.ts
tests/utils/: setup.ts
